<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="18dp"
            android:src="@drawable/drawable_downloading"
            android:visibility="gone"
            android:id="@+id/downloadImageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Заголовок с названием фильма -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Изображение постера -->
            <ImageView
                android:id="@+id/imageViewPoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <!-- Описание фильма -->
            <TextView
                android:id="@+id/textViewDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_decription"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPoster" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descrition_absent"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionTitle" />

            <!-- Рейтинг -->
            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

            <TextView
                android:id="@+id/textViewKpRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewKpRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/textViewKpRating"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewImdbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdb"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/textViewKpRatingText"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />


            <TextView
                android:id="@+id/textViewImdbRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/textViewImdbRating"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewFilmCriticsRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_critics"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/textViewImdbRatingText"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewFilmCriticsRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/textViewFilmCriticsRating"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewRussianFilmCriticsRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ru_film_crititcs"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/textViewFilmCriticsRatingText"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewRussianFilmCriticsRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/textViewRussianFilmCriticsRating"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPosters"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRussianFilmCriticsRatingText" />

            <TextView
                android:id="@+id/textViewReviewsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewPosters" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReviewsTitle" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewReviews" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>